# deep-learning-ai-courses

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
building-systems-with-the-chatgpt-api/: 01_language_models.ipynb  02_classification.ipynb  03_moderation.ipynb  04_chain_of_thought_reasoning.ipynb  05_chaining_prompts.ipynb  06_check_outputs.ipynb  06_evaluation.ipynb  07_evaluation_part_1.ipynb  08_evaluation_part_2.ipynb  09_evaluation-part-II.ipynb  README.md
chatgpt-prompt-engineering-for-developers/: 01_guidelines.ipynb  02_iterative.ipynb  03_summarizing.ipynb  04_inferring.ipynb  05_transforming.ipynb  06_expanding.ipynb  07_chatbot.ipynb  README.md
getting-structured-llm-output/: 02_retry_based_structured_output.ipynb  03_structured_generation_with_outlines.ipynb  04_structured_generation_beyond_json.ipynb
langchain-for-llm-application-development/: 01_models_prompts_and_output_parsers.ipynb  02_memory.ipynb  03_chains.ipynb
mcp-build-rich-context-ai-apps-with-anthropic/: 01_chatbot-example.ipynb
