[project]
name = "deep-learning-ai-courses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "anthropic",
    "arxiv",
    "matplotlib",
    "pandas>=2",
    "python-dotenv",
    "requests", 
]

[project.optional-dependencies]
dev = [
    "docker",
    "ipykernel",
    "ipython",
    "ipywidgets",
    "pre-commit",
    "ruff",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "D", "I"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D206"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
